<resources>

    <string-array name="array_home_tab">
        <item>首页</item>
        <item>购物车</item>
        <item>订单</item>
        <item>个人中心</item>
    </string-array>

    <string name="app_name">爱小屏</string>

    <string name="error">未知错误</string>
    <string name="error_data_load">数据加载失败</string>

    <string name="propaganda">爱生活，一个有爱的智能商圈</string>

    <string name="dialog_alert_title">温馨提示</string>
    <string name="other_login">此账号在另一台设备中登录，被迫下线，如非本人操作，请尽快修改密码。</string>
    <string name="btn_accept">确定</string>
    <string name="btn_cancel">取消</string>

    <string name="hint_login_name">请输入账号</string>
    <string name="hint_login_pwd">请输入密码</string>
    <string name="login">登录</string>
    <string name="login_for_phone">验证码登录</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码?</string>
    <string name="free_register">免费注册</string>
    <string name="hint_login">已有账号请直接登录</string>
    <string name="chiose_register_way">选择注册方式</string>
    <string name="stroll">先去逛逛>></string>
    <string name="alert_no_network">还是先把网络连一下吧</string>
    <string name="alert_name_and_pwd_notnull">用户名和密码不能为空！</string>
    <string name="alert_illegal_phone_number">请输入正确的手机号码！</string>
    <string name="alert_illegal_auth_code">验证码</string>
    <string name="alert_name">请输入用户名</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="hint_auth_code">收不到验证码？</string>
    <string name="send_success">发送成功</string>
    <string name="phone_authentication">(手机认证)</string>
    <string name="input_new_password">新密码(6-16位，不区分大小写)</string>
    <string name="input_mew_password_again">确认密码(6-16位，不区分大小写)</string>
    <string name="next">下一步</string>
    <string name="become_a_fans">我要成为粉丝</string>
    <string name="register_hint">注册成功立即拥有专属的个人邀请码</string>
    <string name="register_hint2">马上邀请朋友一齐分享优惠吧</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="password_hint">密码 (6-16位，不区分大小写)</string>
    <string name="invitation_code_hint">请输入邀请码(选填)</string>
    <string name="invitation_code">验证码</string>
    <string name="agree">同意爱小屏的</string>
    <string name="agreement">安装使用协议</string>
    <string name="intergal_save">积分余额:</string>
    <string name="to_use">去使用></string>
    <string name="intergal_hint">积分多者，可换天下</string>
    <string name="recipient_name">收件人姓名:</string>
    <string name="recipient_phone_number">手机号码:</string>
    <string name="address_now">所在地区:</string>
    <string name="address_details">详细地址:</string>
    <string name="address_details_hint">请填写详细地址，如街道楼牌号等</string>
    <string name="make_sure">确定</string>
    <string name="hint_input_address_now">请选择您所在的地区</string>
    <string name="to_evaluate">我要评分</string>
    <string name="hint_evaluate">请写下你的评论</string>
    <string name="commint">提交</string>

    <string name="home_second_kill_with_end">距离本场结束:</string>
    <string name="home_second_kill_with_start">距离本场开始:</string>
    <string name="seller_shopHours">营业时间：</string>
    <string name="seller_address">地址：</string>	<string name="head_image_hint">点击上传头像</string>
    <string name="name">昵称：</string>
    <string name="phone">电话：</string>
    <string name="address">地址：</string>
    <string name="sex">性别：</string>
    <string name="birthday">生日：</string>
    <string name="logout">退出登录</string>
	<string name="goods_add_shopping_car">加入购物车</string>
    <string name="goods_buy">立即购买</string>
    <string name="goods_share">分享</string>
    <string name="goods_chat">聊天</string>
    <string name="goods_seller">进店逛逛</string>
    <string name="comment">评价</string>
    <string name="good_comment_praise">好评率</string>
    <string name="feedback">意见反馈</string>
    <string name="version">版本号</string>
    <string name="about_aixiaoping">关于爱小屏</string>
    <string name="refresh_backound">刷新锁屏背景</string>
    <string name="receive_message">接收消息推送</string>
    <string name="lock_screen">关闭锁屏</string>
    <string name="lock_screen_hint">关闭锁屏后您将享受不到滑屏送积分和红包的福利哦！！！</string>
    <string name="fans_number">粉丝数量</string>
    <string name="fans_hint">粉丝还是要有的，万一哪天就发了呢。</string>
    <string name="goods_concern">关注</string>
    <string name="clean_memory">清除缓存</string>
    <string name="hint_feedback">我们真的很需要你的意见和建议～</string>
    <string name="feedback_details">反馈内容：</string>
    <string name="feedback_add_photo">添加照片（提供问题截图）</string>
    <string name="out_login">退出登录</string>
    <string name="undefined">完成</string>
    <string name="my_withdraw">我要提现</string>
    <string name="up_data">提交资料</string>
    </resources>