<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/goods_bottom_option_layout_height"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/layout_option_seller"
        android:layout_width="@dimen/goods_bottom_option_option_width"
        android:layout_height="@dimen/goods_bottom_option_layout_height">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/icon_seller"
            android:text="@string/goods_seller"
            android:textColor="@color/font_content_color"
            android:textSize="@dimen/h5" />

    </RelativeLayout>

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="@color/line"
        ></View>

    <RelativeLayout
        android:id="@+id/layout_option_share"
        android:layout_width="@dimen/goods_bottom_option_option_width"
        android:layout_height="@dimen/goods_bottom_option_layout_height">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/icon_share"
            android:text="@string/goods_share"
            android:textColor="@color/font_content_color"
            android:textSize="@dimen/h5" />
    </RelativeLayout>

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="@color/line"
        ></View>

    <RelativeLayout
        android:id="@+id/layout_option_concern"
        android:layout_width="@dimen/goods_bottom_option_option_width"
        android:layout_height="@dimen/goods_bottom_option_layout_height">

        <TextView
            android:id="@+id/tv_option_concern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawablePadding="2dp"
            android:drawableTop="@drawable/icon_concern"
            android:text="@string/goods_concern"
            android:textColor="@color/font_content_color"
            android:textSize="@dimen/h5" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_option_add_shopping_car"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/goodsAddShoppingCarBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/goods_add_shopping_car"
            android:textColor="@color/white"
            android:textSize="@dimen/h7" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_option_buy"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/goodsBuyBackground">

        <TextView
            android:id="@+id/tv_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/goods_buy"
            android:textColor="@color/white"
            android:textSize="@dimen/h7" />
    </RelativeLayout>

</LinearLayout>